# analyticbot

./: .dockerignore  .env  Dockerfile  README.md  alembic.ini  api.py  celery_entrypoint.sh  clear_webhook.py  docker-compose.yml  init_db.py  init_db.sql  pyproject.toml  requirements.txt  run_bot.py
.github/workflows/: python-tests.yml
alembic/: env.py
bot/: bot.py  celery_app.py  container.py  tasks.py
bot/database/: SCHEMA.md  db.py  models.py
bot/database/repositories/: analytics_repository.py  channel_repository.py  plan_repository.py  scheduler_repository.py  user_repository.py
bot/handlers/: admin_handlers.py  user_handlers.py
bot/middlewares/: dependency_middleware.py  i18n.py
bot/models/: twa.py
bot/services/: __init__.py  analytics_service.py  guard_service.py  scheduler_service.py  subscription_service.py
bot/utils/: language_manager.py
postgres-init/: init.sql
src/bot/: bot.py  celery_app.py  config.py  container.py  tasks.py
src/bot/database/: __init__.py  db.py  init_db.sql  models.py  repository.py
src/bot/handlers/: admin_handlers.py  user_handlers.py
src/bot/middlewares/: dependency_middleware.py  i18n.py
src/bot/services/: analytics_service.py  auth_service.py  guard_service.py  scheduler_service.py  subscription_service.py
tests/: test_guard_service.py  test_subscription_service.py
twa-frontend/: .env  index.html  package-lock.json  package.json
twa-frontend/src/: App.jsx  main.jsx  theme.js
twa-frontend/src/components/: AddChannel.jsx  ButtonConstructor.css  ButtonConstructor.jsx  MediaPreview.css  MediaPreview.jsx  (+4 more)
(+9 files in other folders)
