[tool.poetry]
name = "analyticbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
# --- THIS IS THE FINAL FIX ---
# We tell Poetry that the package to install is named 'bot'
# and it can be found inside the 'src' directory.
packages = [{include = "bot", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
SQLAlchemy = {extras = ["asyncio"], version = "^2.0.31"}
aiogram = "^3.10.0"
aiogram-i18n = "^1.4"
alembic = "^1.13.2"
asyncpg = "^0.29.0"
celery = {extras = ["redis"], version = "^5.4.0"}
fastapi = "^0.111.0"
fluent-runtime = "^0.4.0"
matplotlib = "^3.9.1"
punq = "^0.7.0"
pydantic = "^2.8.2"
pydantic-settings = "^2.3.4"
python-dotenv = "^1.0.1"
redis = "^5.0.7"
sentry-sdk = "^2.9.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
